# genai-test

./: README.md  pyproject.toml
invoice_extractor/: app.py  cli.py  config.py  extractor.py  prompt.py
invoice_extractor/resources/: shipments_genai.json  suppliers_genai.json
invoice_extractor/static/: index.html
