[tool.poetry]
name = "invoice-extractor"
version = "0.1.0"
description = "Extract important information from PDF invoice"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyMuPDF = "^1.24.14"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
typer = "^0.13.1"
pymupdf4llm = "^0.0.17"
langchain = "^0.3.8"
langchain-mistralai = "^0.2.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.17"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
invoice_extractor = "invoice_extractor.cli:app"